kube-manifests/NotificationMicroservice-SMTP-externalName-Service.yml
apiVersion: v1 
kind: Service
metadata:
  name: smtp-service
spec:
  type: ExternalName
  externalName: email-smtp.us-east-1.amazonaws.com
